fix(icon-preview-detail): fix close button on mobile

--- a/packages/web/src/app/doc-pages/brand/icon-doc/icon-preview/icon-preview-details/icon-preview-details.component.scss
+++ b/packages/web/src/app/doc-pages/brand/icon-doc/icon-preview/icon-preview-details/icon-preview-details.component.scss
@@ -47,7 +47,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 8px;
+    gap: 16px;
   }
 
   .close-button {
